--- a/templates/completed_task.html
+++ b/templates/completed_task.html
@@ -85,7 +85,7 @@
             <td>{{ task.client.name}}</td>
             <td>{{ task.type}}</td>
             <td>{{ task.time}}</td>
-            <td>{{ task.user }}</td>
+            <td>{{ task.assigned_user }}</td>
           </tr>
          
         {% endfor %} 
