--- a/templates/base.html
+++ b/templates/base.html
@@ -112,7 +112,7 @@
       <div class="col-sm  min-vh-100 ">
 
         <!-- content -->
-        <div class="col">
+        <div class="container">
           {% block titlecontent %} {% endblock %}
         </div>
 
