--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -61,9 +61,9 @@
                 <div class="col-lg-4">
                     <label for="priority" class="form-label" style="color: #00838f;">Status</label>
                     <select name="priority" id="status" class="form-select">
-                        <option value="low">Low</option>
-                        <option value="medium">Medium</option>
-                        <option value="high">High</option>
+                        <option value="0">Low</option>
+                        <option value="1">medium</option>
+                        <option value="2">High</option>
 
                     </select>
                 </div>
