--- a/templates/home.html
+++ b/templates/home.html
@@ -144,7 +144,7 @@
 
             <div class="col-12 col-md-1" style="text-align: center;">
               <h6 class="pt-1 text-primary-d1 letter-spacing">
-                {{task.priority}}
+                {{task.get_priority_display_value}}
               </h6>
             </div>
 
