some changes is edit user

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -46,7 +46,7 @@
                 <div class="col">
                     <label for="task" class="form-label">User Name</label>
                     <input type="text" value="{{user.username}}" class="fw-bold form-control" id="task" placeholder="Task name"
-                        name="user_name" disabled>
+                        name="user_name">
                 </div>
     
             </div>
