--- a/templates/add_task.html
+++ b/templates/add_task.html
@@ -84,10 +84,10 @@
                 </div>
 
                 <div class="col-lg-4">
-                    <label for="user" class="form-label" style="color: #00838f;">User Name</label>
+                    <label for="user" class="form-label" style="color: #00838f;">Assign To</label>
                     <select name="user" id="user" class="form-select">
                         {% for users in userl %} 
-                          <option value="{{ users.id }}">{{users.username}}</option>
+                          <option {% if request.user.id == users.id %}selected{% endif %} value="{{ users.id }}">{{users.username}}</option>
                         {% endfor %}
                     
                     </select>
