--- a/templates/main.html
+++ b/templates/main.html
@@ -114,7 +114,7 @@
       <div class="col-sm p-3 min-vh-100">
         <div class="main">
         
-          <h2>Sidebar</h2>
+          <h2>Sidebar test</h2>
           <p>This sidebar is of full height (100%) and always shown.</p>
           <p>Scroll down the page to see the result.</p>
           <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset
