--- a/templates/signin.html
+++ b/templates/signin.html
@@ -46,7 +46,7 @@
                     {% csrf_token %}
 
                     <div class="text-center text-white" style="background: #00838f; padding-top: 13px;">
-                        <p style=" font-size: 25px;">SIGN IN</p>
+                        <p style=" font-size: 25px;">Log IN</p>
                     </div>
                     <div class="mt-4 p-3">
                         <div class="row mb-n4 align-items-center">
