--- a/templates/base.html
+++ b/templates/base.html
@@ -64,7 +64,7 @@
             <li class="nav-item mb-3">
               <a href="{% url 'add_task' %}" class="nav-link" title="ADD TASK" data-bs-toggle="tooltip"
                 data-bs-placement="right" data-bs-original-title="Dashboard">
-                <i class="bi bi-calendar2-plus-fill fs-5" style="color: #fff;"></i>
+                <i class="bi bi-plus-lg fs-5" style="color: #fff;"></i>
               </a>
             </li>
             <li class="nav-item mb-3">
