--- a/templates/pending.html
+++ b/templates/pending.html
@@ -143,7 +143,7 @@
               </select>
             </div>
             <div class="col">
-              <label for="taskAssignedUser" class="form-label">Status</label>
+              <label for="taskAssignedUser" class="form-label">Assign to</label>
               <select class="form-select"  id="taskAssignedUser" name="taskAssignedUser">
                 
                 {% for user in users %}
